--- a/index.html
+++ b/index.html
@@ -17,7 +17,26 @@
       <!-- Additional required wrapper -->
       <div class="swiper-wrapper">
         <!-- Slides -->
-        <div class="swiper-slide">Slide 1</div>
+        <div class="swiper-slide">
+          <img
+            src="assets/img/cinematic_slider_01.jpg"
+            alt="Exploração cinematográfica sobre obsessão e vício"
+          />
+          <div class="content">
+            <p class="subtitle">Requiem for a dream</p>
+            <h1 class="title">
+              Uma Exploração Cinematográfica sobre Vício e Obsessão
+            </h1>
+            <p class="text">
+              Uma jornada intensa e visceral que explora os limites dos sonhos,
+              vícios e desespero humano. Acompanhe a história de quatro
+              personagens cujas vidas são consumidas por suas ambições e
+              fraquezas.
+            </p>
+            <button class="custom-next-button">Começar</button>
+          </div>
+        </div>
+
         <div class="swiper-slide">Slide 2</div>
         <div class="swiper-slide">Slide 3</div>
         <!-- Add more slides if needed -->
